# forgepilot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  startup.sh
forgepilot-backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
forgepilot-backend/alembic/: env.py
forgepilot-backend/alembic/versions/: 0002_phase2_agent_tables.py
forgepilot-backend/src/forgepilot_backend/: config.py  main.py  models.py
forgepilot-backend/src/forgepilot_backend/agents/: __init__.py  base.py  coder.py  engine.py  guardian.py  llm.py  maestro.py  registry.py  scout.py  sentinel.py  tools.py
forgepilot-backend/src/forgepilot_backend/api/: router.py
forgepilot-backend/src/forgepilot_backend/api/routes/: agents.py  auth.py  conversations.py  events.py  health.py  pipeline.py  sessions.py  tasks.py
forgepilot-backend/src/forgepilot_backend/core/: deps.py  security.py  state.py
forgepilot-backend/src/forgepilot_backend/db/: models.py  session.py
forgepilot-backend/src/forgepilot_backend/services/: events.py  orchestrator.py  policy.py  sandbox.py
manch-backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
manch-backend/alembic/: env.py
manch-backend/alembic/versions/: 0001_add_users_and_user_scoping.py  0003_phase3_approval_columns.py  0004_phase5_expansion.py  0005_teams_and_team_scoping.py  0006_task_repo_id.py
manch-backend/src/manch_backend/: config.py  main.py  models.py
manch-backend/src/manch_backend/agents/: __init__.py  architect.py  base.py  coder.py  devops.py  docsmith.py  engine.py  fixer.py  guardian.py  llm.py  maestro.py  memory.py  registry.py  reviewer.py  scout.py  sentinel.py  tools.py
manch-backend/src/manch_backend/api/: router.py
manch-backend/src/manch_backend/core/: deps.py  security.py  state.py
manch-backend/src/manch_backend/db/: models.py  session.py
manch-backend/src/manch_backend/services/: bot_service.py  events.py  orchestrator.py  policy.py  sandbox.py  state_machine.py
manch-backend/src/manch_backend/skills/: __init__.py  marketplace.py  registry.py
(+151 files in other folders)
